<resources>
    <string name="app_name">Fly365</string>
    <string name="flights">Flights</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="multi_city">Multi City</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from_where">From where?</string>
    <string name="origin_and_destination_should_be_different">Origin and destination should be different</string>
    <string name="traveller">traveller</string>
    <string name="travellers">travellers</string>
    <string name="cabin_type">Cabin type</string>
    <string name="economy">Economy</string>
    <string name="premium">Premium</string>
    <string name="business">Business</string>
    <string name="first">First</string>
    <string name="adult">Adult</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="child">Child</string>
    <string name="infant">Infant</string>
    <string name="apply">Apply</string>
    <string name="travellers_capital">Travellers</string>
    <string name="timeout_error_message">Looks like the server is taking too long to respond, please try again in
        sometime
    </string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="generic_unknown_error">Technical Issue Occurred</string>
    <string name="stop">stop</string>
    <string name="airline">airline</string>
    <string name="airlines">Airlines</string>
    <string name="airports">Airports</string>
    <string name="stops">Stops</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear_all">Clear All</string>


    <string-array name="airlines">
        <item>Air China Limited</item>
        <item>British Airways</item>
        <item>Emirates</item>
        <item>KLM</item>
        <item>Qantas</item>
        <item>Royal Jordanian</item>
    </string-array>
</resources>
