<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".flightsearch.presentation.ui.FilterActivity">
    <Button
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/buttonFilterAirlines"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            app:layout_constraintVertical_chainStyle="packed"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonFilterAirports"
            android:layout_margin="@dimen/margin_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/airlines"
            android:text="@string/airlines"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"/>
    <Button
            app:layout_constraintTop_toBottomOf="@id/buttonFilterAirlines"
            android:id="@+id/buttonFilterAirports"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@id/buttonFilterStops"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/airports"
            tools:text="@string/airports"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"/>
    <Button
            app:layout_constraintTop_toBottomOf="@id/buttonFilterAirports"
            android:id="@+id/buttonFilterStops"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/margin_8dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/stops"
            tools:text="@string/stops"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"/>
</androidx.constraintlayout.widget.ConstraintLayout>