<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".flightsearch.presentation.ui.SearchOptionsActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"/>

    <TextView
            android:text="@string/cabin_type"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            style="@style/Title1Style"
            android:layout_marginStart="@dimen/margin_16dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/textViewCabinType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCabinTypes"
            android:layout_marginTop="@dimen/margin_16dp"
            android:background="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCabinType"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp">
    </androidx.recyclerview.widget.RecyclerView>
    <View
            android:id="@+id/separator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewCabinTypes"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@color/colorDarkGrey" android:layout_width="0dp"
            android:layout_height="@dimen/line_height"/>

    <TextView
            android:text="@string/travellers_capital"
            android:layout_marginTop="@dimen/margin_16dp"
            app:layout_constraintTop_toBottomOf="@id/separator"
            app:layout_constraintStart_toStartOf="@id/recyclerViewCabinTypes"
            android:layout_marginStart="@dimen/margin_16dp"
            android:textColor="@android:color/black"
            style="@style/Title1Style"
            android:id="@+id/textViewTravellers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="0dp"
            android:id="@+id/guideline"
            app:layout_constraintGuide_percent="0.4"
    />
    <LinearLayout
            android:id="@+id/linearAdult"
            app:layout_constraintTop_toBottomOf="@id/textViewTravellers"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/adult"
                style="@style/Title1Style"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"/>

        <Button
                android:background="@drawable/ic_arrow_down"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/height_32dp"
                android:id="@+id/buttonDecrementAdult"/>

        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/editTextQuantityAdult"
                android:text="@string/zero"
                android:elevation="@dimen/elevation_4dp"
                android:background="@null"
                android:focusable="true"
                android:textAlignment="center"
                style="@style/Title1Style"
                android:inputType="number"
                android:layout_height="@dimen/height_32dp"
        />

        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_arrow_up"
                android:elevation="@dimen/elevation_4dp"
                android:layout_height="@dimen/height_32dp"
                android:id="@+id/buttonIncrementAdult"/>
    </LinearLayout>
    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearAdult"
            android:id="@+id/linearChild"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/child"
                style="@style/Title1Style"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"/>
        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_arrow_down"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="@dimen/height_32dp"
                android:id="@+id/buttonDecrementChild"/>

        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/editTextQuantityChild"
                android:text="@string/zero"
                android:elevation="@dimen/elevation_4dp"
                android:background="@null"
                android:focusable="true"
                android:textAlignment="center"
                style="@style/Title1Style"
                android:inputType="number"
                android:layout_height="@dimen/height_32dp"
        />

        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_arrow_up"
                android:elevation="@dimen/elevation_4dp"
                android:layout_height="@dimen/height_32dp"
                android:id="@+id/buttonIncrementChild"/>
    </LinearLayout>
    <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/linearChild"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/infant"
                style="@style/Title1Style"
                android:layout_width="0dp"
                android:layout_weight="7"
                android:layout_height="wrap_content"/>
        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_arrow_down"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="@dimen/height_32dp"
                android:id="@+id/buttonDecrementInfant"/>

        <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/editTextQuantityInfant"
                android:text="@string/zero"
                android:elevation="@dimen/elevation_4dp"
                android:background="@null"
                android:focusable="true"
                android:textAlignment="center"
                style="@style/Title1Style"
                android:inputType="number"
                android:layout_height="@dimen/height_32dp"
        />

        <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/ic_arrow_up"
                android:elevation="@dimen/elevation_4dp"
                android:layout_height="@dimen/height_32dp"
                android:id="@+id/buttonIncrementInfant"/>
    </LinearLayout>

    <Button
            android:id="@+id/buttonApply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/apply"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/button_bg"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>